...
	const filteredCompanies = companies.filter((company) =>
		company.name.toLowerCase().includes(searchQuery.toLowerCase()),
	);

	return (
		<View style={[styles.container, { marginTop: insets.top }]}>
			<HeaderText>Sabor Caseiro</HeaderText>
			<View style={styles.inputContainer}>
				<TextInput
					placeholder="Procure a construtora"
					value={searchQuery}
					onChangeText={setSearchQuery}
					style={styles.textInput}
...
			<View style={styles.clientCardsContainer}>
				<FlatList
					data={filteredCompanies}
					keyExtractor={(item: Company) => item.id.toString()}
					renderItem={({ item }) => (
						<ClientCard
							testID="client-card"
							clientName={item.name}
							totalValue={item.total_value / 100}
							totalMeals={item.total_meals}
							responsibleName={item.responsible_person}
							onPress={() => {
								navigation.navigate("ClientDetails", {
...
